// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categorical Should render categorical legend with breaks from custom 1`] = `""`;

exports[`categorical Should render categorical legend with breaks from default 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <Category
      color="#54B399"
      isLinesOnly={false}
      isPointsOnly={true}
      key="0"
      label="US_format"
      styleName="lineColor"
    />
    <Category
      color="#6092C0"
      isLinesOnly={false}
      isPointsOnly={true}
      key="1"
      label="CN_format"
      styleName="lineColor"
    />
    <Category
      color="#D36086"
      isLinesOnly={false}
      isPointsOnly={true}
      key="fallbackCategory"
      label={
        <EuiTextColor
          color="secondary"
        >
          Other
        </EuiTextColor>
      }
      styleName="lineColor"
    />
  </EuiFlexGroup>
</div>
`;

exports[`ordinal Should render custom ordinal legend with breaks 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <Category
      color="#FF0000"
      isLinesOnly={false}
      isPointsOnly={true}
      key="0"
      label="0_format"
      styleName="lineColor"
    />
    <Category
      color="#00FF00"
      isLinesOnly={false}
      isPointsOnly={true}
      key="1"
      label="10_format"
      styleName="lineColor"
    />
  </EuiFlexGroup>
</div>
`;

exports[`ordinal Should render only single band of last color when delta is 0 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <Category
      color="#072f6b"
      isLinesOnly={false}
      isPointsOnly={true}
      key="0"
      label="100_format"
      styleName="lineColor"
    />
  </EuiFlexGroup>
</div>
`;

exports[`ordinal Should render ordinal legend as bands 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <Category
      color="#f7faff"
      isLinesOnly={false}
      isPointsOnly={true}
      key="0"
      label="0_format"
      styleName="lineColor"
    />
    <Category
      color="#ddeaf7"
      isLinesOnly={false}
      isPointsOnly={true}
      key="1"
      label="13_format"
      styleName="lineColor"
    />
    <Category
      color="#c5daee"
      isLinesOnly={false}
      isPointsOnly={true}
      key="2"
      label="25_format"
      styleName="lineColor"
    />
    <Category
      color="#9dc9e0"
      isLinesOnly={false}
      isPointsOnly={true}
      key="3"
      label="38_format"
      styleName="lineColor"
    />
    <Category
      color="#6aadd5"
      isLinesOnly={false}
      isPointsOnly={true}
      key="4"
      label="50_format"
      styleName="lineColor"
    />
    <Category
      color="#4191c5"
      isLinesOnly={false}
      isPointsOnly={true}
      key="5"
      label="63_format"
      styleName="lineColor"
    />
    <Category
      color="#2070b4"
      isLinesOnly={false}
      isPointsOnly={true}
      key="6"
      label="75_format"
      styleName="lineColor"
    />
    <Category
      color="#072f6b"
      isLinesOnly={false}
      isPointsOnly={true}
      key="7"
      label="88_format"
      styleName="lineColor"
    />
  </EuiFlexGroup>
</div>
`;
